<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.entrega.ListViewActivity"
    android:background="@drawable/principal"
    >

    <ListView
        android:id="@+id/lista1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/bAbrir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:text="@string/abrir"
        android:onClick="abrir"/>

    <Button
        android:id="@+id/bNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:text="@string/borrar"
        android:onClick="borrar"/>

    <Button
        android:id="@+id/bBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:text="@string/nuevo"
        android:onClick="nuevo"/>


</RelativeLayout>
