<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.entrega.ColoresAct"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/pdark"
                android:text="@string/colortit"
                android:textAlignment="center"
                android:textSize="27dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text="@string/rojo"
                android:fontFamily="@font/font"
                android:layout_margin="10dp"
                android:layout_weight="1"/>

            <SeekBar
                android:id="@+id/sbRojo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:max="255"
                android:progress="0" />

            <TextView
                android:id="@+id/tvRojo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="0"
                android:layout_margin="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text="@string/verde"
                android:fontFamily="@font/font"
                android:layout_margin="10dp"
                android:layout_weight="1"/>

            <SeekBar
                android:id="@+id/sbVerde"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:max="255"
                android:progress="0" />

            <TextView
                android:id="@+id/tvVerde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="0"
                android:layout_margin="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text="@string/azul"
                android:fontFamily="@font/font"
                android:layout_margin="10dp"
                android:layout_weight="1"/>

            <SeekBar
                android:id="@+id/sbAzul"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:max="255"
                android:progress="0" />

            <TextView
                android:id="@+id/tvAzul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="0"
                android:layout_margin="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text="@string/alfa"
                android:fontFamily="@font/font"
                android:layout_margin="10dp"
                android:layout_weight="1"/>

            <SeekBar
                android:id="@+id/sbAlfa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:max="255"
                android:progress="0" />

            <TextView
                android:id="@+id/tvAlfa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="0"
                android:layout_margin="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/bGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/guardar"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <SurfaceView
                    android:id="@+id/sfvGuardado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <SurfaceView
                    android:id="@+id/sfvActual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
